--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,1 @@
-*.Dart linguist-detectable=true  
-*.C++ linguist-detectable=false  
-*.java linguist-detectable=false  
-*.js linguist-detectable=false  
-*.html linguist-detectable=false  
-*.xml linguist-detectable=false    
+project-docs/* linguist-documentation
