--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,1 @@
-android/* linguist-vendored
-build/* linguist-vendored
-build/* linguist-vendored
-linux/* linguist-vendored
-macos/* linguist-vendored
-test/* linguist-vendored
-web/* linguist-vendored
-windows/* linguist-vendored
-
+*.cpp linguist-detectable=false
