--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
+*.dart linguist-detectable=true
+*.cmake linguist-detectable=false
+*.swift linguist-detectable=false
+*.kt linguist-detectable=false
+*.h linguist-detectable=false
 *.cpp linguist-detectable=false
