--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.dart linguist-detectable=true
+*.dart linguist-detectable=true
 *.cmake linguist-detectable=false
 *.swift linguist-detectable=false
 *.kt linguist-detectable=false
