--- a/.gitattributes
+++ b/.gitattributes
@@ -5,4 +5,5 @@
 *.kt linguist-detectable=false
 *.h linguist-detectable=false
 *.cpp linguist-detectable=false
-windows/* linguist-vendored
+windows/* -linguist-vendored
+
